# stamp-photo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
stamp_photo/: core.py  fonts.py  gui.py  styles.py
